public/css/responsive.css
/* ... */
@media only screen and (max-width:769px) {
    .regi_lo {

        background-color: transparent;
        margin-right: 285px !important;
        margin-top: -3px !important;

        font-family: Muller, sans-serif;
        font-weight: 700;
        color: #f3f2ff;
        border: none;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 2.4px;
        position: fixed;
        top: 7;
        right: -15px;
        -webkit-transform: translateX(100%);
        -ms-transform: translateX(100%);
        transform: translateX(100%);
        -webkit-transition: all .2s ease-in-out;
        -o-transition: all .2s ease-in-out;
        transition: all .2s ease-in-out;
        outline: none !important;
        box-shadow: none;
    }

}

@media only screen and (max-width:425px) {
    .regi_lo {

        background-color: transparent;
        margin-right: 275px !important;
        margin-top: 5px !important;

        font-family: Muller, sans-serif;
        font-weight: 700;
        color: #f3f2ff;
        border: none;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 2.4px;
        position: fixed;
        top: 7;
        right: -15px;
        -webkit-transform: translateX(100%);
        -ms-transform: translateX(100%);
        transform: translateX(100%);
        -webkit-transition: all .2s ease-in-out;
        -o-transition: all .2s ease-in-out;
        transition: all .2s ease-in-out;
        outline: none !important;
        box-shadow: none;
    }

}

@media only screen and (max-width:375px) {
    .regi_lo {

        background-color: transparent;
        margin-right: 68%;
        margin-top: 2px !important;
        font-family: Muller, sans-serif;
        font-weight: 700;
        color: #f3f2ff;
        border: none;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 2.4px;
        position: fixed;
        top: 7;
        right: -15px;
        -webkit-transform: translateX(100%);
        -ms-transform: translateX(100%);
        transform: translateX(100%);
        -webkit-transition: all .2s ease-in-out;
        -o-transition: all .2s ease-in-out;
        transition: all .2s ease-in-out;
        outline: none !important;
        box-shadow: none;
    }
}

@media only screen and (max-width:360px) {
    .regi_lo {

        background-color: transparent;
        margin-right: 275px !important;
        margin-top: 0px !important;

        font-family: Muller, sans-serif;
        font-weight: 700;
        color: #f3f2ff;
        border: none;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 2.4px;
        position: fixed;
        top: 7;
        right: -15px;
        -webkit-transform: translateX(100%);
        -ms-transform: translateX(100%);
        transform: translateX(100%);
        -webkit-transition: all .2s ease-in-out;
        -o-transition: all .2s ease-in-out;
        transition: all .2s ease-in-out;
        outline: none !important;
        box-shadow: none;
    }

    .request__list-item {
        padding-left: 0;
    }

    .request__form-btn {
        margin-left: 48px;
    }

}

@media only screen and (max-width:320px) {
    .regi_lo {

        background-color: transparent;
        margin-right: 265px !important;
        margin-top: -2px !important;

        font-family: Muller, sans-serif;
        font-weight: 700;
        color: #f3f2ff;
        border: none;
        font-size: 12px;
        text-transform: uppercase;
        letter-spacing: 2.4px;
        position: fixed;
        top: 7;
        right: -15px;
        -webkit-transform: translateX(100%);
        -ms-transform: translateX(100%);
        transform: translateX(100%);
        -webkit-transition: all .2s ease-in-out;
        -o-transition: all .2s ease-in-out;
        transition: all .2s ease-in-out;
        outline: none !important;
        box-shadow: none;
    }

}


@media only screen and (max-width:500px) {
    .navbar-x {
        position: fix !important;
        margin-left: 0.3% !important;
    }

    footer {
        background: -webkit-linear-gradient(left, #090025 0%, #2f0028 100%);
        background: -o-linear-gradient(left, #090025 0%, #2f0028 100%);
        background: linear-gradient(to right, #090025 0%, #2f0028 100%);

    }
}

@media only screen and (max-width:500px) {
    #txt {
        display: none;
    }
}

@media only screen and (min-width:1024px) {
    .hud-timer__inner {
        max-width: 18%;
        margin-right: auto;
        margin-bottom: -10%;
    }

    .hud__deadline {
        padding-right: 3.5em;
    }
}

@media only screen and (max-height:768px) {
    .main__desc {
        margin-top: 60%
    }

    #npt {
        margin-top: 100% !important
    }
}



@media only screen and (max-width:500px) {
    .request__info {
        text-align: center !important
    }

    .request__list-item::before {
        background: transparent !important
    }

    .section-header {
        text-align: center !important
    }

}

.request__info-header {
    color: white !important
}





/* footer respo */
@media only screen and (max-width:1921px) {
    #seprate {
        margin-left: 56% !important
    }
}

@media only screen and (max-width:1746px) {
    #seprate {
        margin-left: 53% !important
    }
}

@media only screen and (max-width:1460px) {
    #seprate {
        margin-left: 45% !important
    }
}

@media only screen and (max-width:1030px) {
    #seprate {
        margin-left: 26% !important
    }
}

@media only screen and (min-width:769px) {
    .hud-bottom {
        position: fixed;
    }
}

@media only screen and (height: 690px) and (width:856px) {

    #txt {
        font-size: 29px !important;
        margin-top: 21% !important
    }

    .hud--main {
        margin-bottom: 2% !important
    }

    #seprate {
        margin-left: 18% !important
    }
}
/* ... */

